# digikam-web

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
docs/: thumbnail-loading-performance.md
nix/: nixos-module.nix  webpgf.nix
src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  manifest.webmanifest  models.rs  query.rs  sw.js  web.css  web.js  web.rs
src/assets/: style.css
src/tests/: bookmarks.rs  files.rs  mod.rs  moving.rs  rating.rs  read.rs  tagging.rs
src/web/: grid.js  gridnav.js  lightbox.js  main.js  navbar.js  state.js  thumbnails.js  undo.js
