[package]
name = "digikam-browse"
version = "0.1.0"
edition = "2021"
description = "Read-only web backend for browsing a Digikam photo database"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = "1"

rusqlite = { version = "0.32", features = ["bundled", "trace"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
mime_guess = "2"
urlencoding = "2"

[profile.release]
opt-level = 3
